--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.8'
 
 services:
-  ffc-template-node:
+  ffc-sfi-api-gateway:
     build:
       context: .
       target: production
-    image: ffc-template-node
-    container_name: ffc-template-node
+    image: ffc-sfi-api-gateway
+    container_name: ffc-sfi-api-gateway
     environment: {}
