--- a/helm/ffc-sfi-api-gateway/Chart.yaml
+++ b/helm/ffc-sfi-api-gateway/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-description: description-of-project-goes-here
-name: ffc-template-node
+description: SFI Api Gateway for connecting to Crown Hosting
+name: ffc-sfi-api-gateway
 # this version is automatically updated in the build pipline
 version: 1.0.0
 dependencies:
