--- a/helm/ffc-sfi-api-gateway/values.yaml
+++ b/helm/ffc-sfi-api-gateway/values.yaml
@@ -1,13 +1,13 @@
 environment: development
-name: ffc-template-node
-namespace: ffc-demo
-workstream: ffc-demo
-image: ffc-template-node
+name: ffc-sfi-api-gateway
+namespace: ffc-sfi
+workstream: ffc-sfi
+image: ffc-sfi-api-gateway
 
 labels: {}
 
 containerConfigMap:
-  name: ffc-template-node-config-map
+  name: ffc-sfi-api-gateway-config-map
 
 deployment:
   restartPolicy: Always
