--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,8 @@ services:
       target: production
     image: ffc-sfi-api-gateway
     container_name: ffc-sfi-api-gateway
-    environment: {}
+    environment: 
+      APPINSIGHTS_CLOUDROLE: ffc-sfi-crown-hosting-prototype
+      APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+      CH_API_ID: ${CH_API_ID},
+      CH_API_KEY: ${CH_API_KEY}
