--- a/helm/ffc-sfi-api-gateway/templates/config-map.yaml
+++ b/helm/ffc-sfi-api-gateway/templates/config-map.yaml
@@ -3,4 +3,6 @@
 data:
   NODE_ENV: {{ quote .Values.environment }}
   PORT: {{ quote .Values.container.port }}
+  APPINSIGHTS_CLOUDROLE: {{ quote .Values.name }}
+  CH_API_ID: {{ quote .Values.container.chApiId }}
 {{- end -}}
