--- a/helm/ffc-sfi-api-gateway/values.yaml
+++ b/helm/ffc-sfi-api-gateway/values.yaml
@@ -6,8 +6,19 @@ image: ffc-sfi-api-gateway
 
 labels: {}
 
+appInsights:
+  key:
+
 containerConfigMap:
   name: ffc-sfi-api-gateway-config-map
+
+containerSecret:
+  name: ffc-sfi-api-gateway-container-secret
+  type: Opaque
+
+service:
+  port: 80
+  type: ClusterIP
 
 deployment:
   restartPolicy: Always
@@ -16,12 +27,19 @@ deployment:
   minReadySeconds: 0
 
 container:
-  imagePullPolicy: IfNotPresent
-  requestMemory: 10Mi
-  requestCpu: 10m
+  imagePullPolicy: Always
+  requestMemory: 5Mi
+  requestCpu: 5m
   limitMemory: 40Mi
   limitCpu: 40m
   port: 3000
+  chApiId:
+  chApiKey:
+
+ingress:
+  class: nginx
+  endpoint: ffc-sfi-api-gateway
+  server: example.com
 
 livenessProbe:
   path: /healthz
