--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/hapi": "^20.0.0"
+    "@hapi/good": "^9.0.1",
+    "@hapi/good-console": "^9.0.1",
+    "@hapi/good-squeeze": "^6.0.0",
+    "@hapi/inert": "^6.0.3",
+    "@hapi/h2o2": "^9.1.0",
+    "@hapi/hapi": "^20.0.0",
+    "@hapi/wreck": "^17.1.0",
+    "blipp": "^4.0.2",
+    "applicationinsights": "^1.8.10"
   },
   "devDependencies": {
     "jest": "^26.4.0",
