--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@hapi/good": "^9.0.1",
     "@hapi/good-console": "^9.0.1",
     "@hapi/good-squeeze": "^6.0.0",
-    "@hapi/inert": "^6.0.3",
     "@hapi/h2o2": "^9.1.0",
     "@hapi/hapi": "^20.0.0",
+    "@hapi/inert": "^6.0.3",
+    "@hapi/vision": "^6.1.0",
     "@hapi/wreck": "^17.1.0",
+    "applicationinsights": "^1.8.10",
     "blipp": "^4.0.2",
-    "applicationinsights": "^1.8.10"
+    "hapi-swagger": "^14.2.1",
+    "joi": "^17.4.0"
   },
   "devDependencies": {
     "jest": "^26.4.0",
