--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "@hapi/wreck": "^17.1.0",
     "applicationinsights": "^1.8.10",
     "blipp": "^4.0.2",
-    "joi": "^17.4.0",
-    "hapi-swagger": "^14.2.1"
+    "joi": "^17.4.0"
   },
   "devDependencies": {
     "jest": "^26.4.0",
