--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/DEFRA/ffc-sfi-api-gateway",
   "main": "app/index.js",
   "scripts": {
-    "test": "snyk test && jest --runInBand",
+    "test": "jest --runInBand",
     "test:watch": "jest --coverage=false --onlyChanged --watch --runInBand",
     "start:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch app/index.js"
   },
