--- a/helm/ffc-sfi-api-gateway/templates/config-map.yaml
+++ b/helm/ffc-sfi-api-gateway/templates/config-map.yaml
@@ -5,4 +5,5 @@ data:
   PORT: {{ quote .Values.container.port }}
   APPINSIGHTS_CLOUDROLE: {{ quote .Values.name }}
   CH_API_ID: {{ quote .Values.container.chApiId }}
+  CH_API: {{ quote .Values.container.chApi }}
 {{- end -}}
