--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -4,14 +4,14 @@ version: '3.8'
 # to provide dependencies and expose ports for local testing
 
 services:
-  ffc-template-node:
+  ffc-sfi-api-gateway:
     build:
       target: development
-    image: ffc-template-node-development
-    container_name: ffc-template-node-development
+    image: ffc-sfi-api-gateway-development
+    container_name: ffc-sfi-api-gateway-development
     ports:
-      - "3000:3000"
-      - "9229:9229"
+      - "3005:3005"
+      - "9235:9229"
     volumes:
       - ./app/:/home/node/app/
       - ./package.json:/home/node/package.json
