--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,15 @@
 version: '3.8'
 
 services:
-  ffc-template-node:
+  ffc-sfi-api-gateway:
     build:
       context: .
       target: production
-    image: ffc-template-node
-    container_name: ffc-template-node
-    environment: {}
+    image: ffc-sfi-api-gateway
+    container_name: ffc-sfi-api-gateway
+    environment: 
+      APPINSIGHTS_CLOUDROLE: ffc-sfi-crown-hosting-prototype
+      APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+      CH_API: ${CH_API},
+      CH_API_ID: ${CH_API_ID},
+      CH_API_KEY: ${CH_API_KEY}
