--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
-  "version": "0.1.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "name": "ffc-sfi-api-gateway",
+  "version": "1.0.0",
+  "description": "SFI Api Gateway for connecting to Crown Hosting",
+  "homepage": "https://github.com/DEFRA/ffc-sfi-api-gateway",
   "main": "app/index.js",
   "scripts": {
     "test": "jest --runInBand",
@@ -13,13 +13,25 @@
   "contributors": [],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/hapi": "^20.0.0"
+    "@hapi/good": "^9.0.1",
+    "@hapi/good-console": "^9.0.1",
+    "@hapi/good-squeeze": "^6.0.0",
+    "@hapi/h2o2": "^9.1.0",
+    "@hapi/hapi": "^20.0.0",
+    "@hapi/inert": "^6.0.3",
+    "@hapi/vision": "^6.1.0",
+    "@hapi/wreck": "^17.1.0",
+    "applicationinsights": "^1.8.10",
+    "blipp": "^4.0.2",
+    "joi": "^17.4.0",
+    "hapi-swagger": "^14.2.1"
   },
   "devDependencies": {
     "jest": "^26.4.0",
     "jest-junit": "^11.1.0",
     "nodemon": "^2.0.4",
-    "standard": "^14.3.4"
+    "standard": "^14.3.4",
+    "snyk": "^1.652.0"
   },
   "standard": {
     "globals": [
