--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
     environment: 
       APPINSIGHTS_CLOUDROLE: ffc-sfi-crown-hosting-prototype
       APPINSIGHTS_INSTRUMENTATIONKEY: ${APPINSIGHTS_INSTRUMENTATIONKEY}
+      USE_MOCK: ${USE_MOCK}
       CH_API: ${CH_API}
       CH_API_ID: ${CH_API_ID}
       CH_API_KEY: ${CH_API_KEY}
