--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -13,5 +13,5 @@ services:
       - "3005:3005"
       - "9235:9229"
     volumes:
-      - ./app/:/home/node/app/
+      - ./app:/home/node/app
       - ./package.json:/home/node/package.json
