--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/h2o2": "^9.1.0",
-    "@hapi/hapi": "^20.0.0",
-    "@hapi/inert": "^6.0.3",
-    "@hapi/vision": "^6.1.0",
-    "@hapi/wreck": "^17.1.0",
-    "applicationinsights": "^1.8.10",
-    "blipp": "^4.0.2",
-    "hapi-pino": "^8.3.0",
-    "hapi-swagger": "^14.2.4",
-    "joi": "^17.4.0"
+    "@hapi/h2o2": "9.1.0",
+    "@hapi/hapi": "20.0.0",
+    "@hapi/inert": "6.0.3",
+    "@hapi/vision": "6.1.0",
+    "@hapi/wreck": "17.1.0",
+    "applicationinsights": "1.8.10",
+    "blipp": "4.0.2",
+    "hapi-pino": "8.3.0",
+    "hapi-swagger": "17.1.0",
+    "joi": "17.4.0"
   },
   "devDependencies": {
-    "jest": "^26.4.0",
-    "jest-junit": "^13.0.0",
-    "nodemon": "^2.0.4",
-    "standard": "^16.0.4"
+    "jest": "26.4.0",
+    "jest-junit": "13.0.0",
+    "nodemon": "3.0.1",
+    "standard": "16.0.4"
   },
   "standard": {
     "globals": [
