--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   ],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/h2o2": "9.1.0",
+    "@hapi/h2o2": "10.0.3",
     "@hapi/hapi": "21.3.2",
-    "@hapi/inert": "6.0.3",
-    "@hapi/vision": "6.1.0",
-    "@hapi/wreck": "17.1.0",
+    "@hapi/hoek": "11.0.2",
+    "@hapi/inert": "7.1.0",
+    "@hapi/vision": "7.0.3",
+    "@hapi/wreck": "18.0.1",
     "applicationinsights": "1.8.10",
     "blipp": "4.0.2",
     "hapi-pino": "8.3.0",
@@ -27,7 +28,7 @@
     "joi": "17.4.0"
   },
   "devDependencies": {
-    "jest": "26.4.0",
+    "jest": "29.7.0",
     "jest-junit": "13.0.0",
     "nodemon": "3.0.1",
     "standard": "16.0.4"
