--- a/helm/ffc-sfi-api-gateway/Chart.yaml
+++ b/helm/ffc-sfi-api-gateway/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
 description: SFI Api Gateway for connecting to Crown Hosting
 name: ffc-sfi-api-gateway
-# this version is automatically updated in the build pipline
+# this version is automatically updated in the build pipeline
 version: 1.0.0
 dependencies:
 - name: ffc-helm-library
-  version: ^3.0.0
+  version: 4.0.0
   repository: https://raw.githubusercontent.com/defra/ffc-helm-repository/master/
