--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ffc-sfi-api-gateway",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "SFI Api Gateway for connecting to Crown Hosting",
   "homepage": "https://github.com/DEFRA/ffc-sfi-api-gateway",
   "main": "app/index.js",
@@ -10,25 +10,29 @@
     "start:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch app/index.js"
   },
   "author": "Defra",
-  "contributors": [],
+  "contributors": [
+    "John Watson john.watson1@defra.gov.uk"
+  ],
   "license": "OGL-UK-3.0",
   "dependencies": {
-    "@hapi/h2o2": "^9.1.0",
-    "@hapi/hapi": "^20.0.0",
-    "@hapi/inert": "^6.0.3",
-    "@hapi/vision": "^6.1.0",
-    "@hapi/wreck": "^17.1.0",
-    "applicationinsights": "^1.8.10",
-    "blipp": "^4.0.2",
-    "hapi-pino": "^8.3.0",
-    "hapi-swagger": "^14.2.4",
-    "joi": "^17.4.0"
+    "@hapi/h2o2": "10.0.3",
+    "@hapi/hapi": "21.3.2",
+    "@hapi/hoek": "11.0.2",
+    "@hapi/inert": "7.1.0",
+    "@hapi/vision": "7.0.3",
+    "@hapi/wreck": "18.0.1",
+    "applicationinsights": "1.8.10",
+    "blipp": "4.0.2",
+    "hapi-pino": "8.3.0",
+    "hapi-swagger": "17.1.0",
+    "joi": "17.4.0",
+    "log-timestamp": "0.3.0"
   },
   "devDependencies": {
-    "jest": "^26.4.0",
-    "jest-junit": "^13.0.0",
-    "nodemon": "^2.0.4",
-    "standard": "^16.0.4"
+    "jest": "29.7.0",
+    "jest-junit": "13.0.0",
+    "nodemon": "3.0.1",
+    "standard": "16.0.4"
   },
   "standard": {
     "globals": [
